--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">example</string>
+    <string name="facebook_app_id">207638560019186</string>
 </resources>
